cmake_minimum_required(VERSION 3.10)

SET(PROTO_SERVER server_proto)
SET(PROTO_CLIENT client_proto)
PROJECT(proto_test)

FIND_PACKAGE(Protobuf REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_LIST_DIR}/include
    ${CMAKE_CURRENT_LIST_DIR}/protobuf
)

file(GLOB SRC_PROTOBUF_FILES
    ${CMAKE_CURRENT_LIST_DIR}/protobuf/animal/*.cc
)

file(GLOB SRC_CLIENT_FILES
    ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/client/*.cpp
)

file(GLOB SRC_CLIENT_FILES
    ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/client/*.cpp
)
file(GLOB SRC_SERVER_FILES
    ${CMAKE_CURRENT_LIST_DIR}/src/*.cpp
    ${CMAKE_CURRENT_LIST_DIR}/src/server/*.cpp
)

ADD_EXECUTABLE(${PROTO_SERVER} ${SRC_SERVER_FILES})
ADD_EXECUTABLE(${PROTO_CLIENT} ${SRC_CLIENT_FILES})

message("${CMAKE_CURRENT_LIST_DIR}/src/server/")
message("SRC_SERVER_FILES:" ${SRC_SERVER_FILES})

TARGET_LINK_LIBRARIES(${PROTO_SERVER} 
    ${PROTOBUF_LIBRARIES}
    ${SRC_PROTOBUF_FILES}
)

TARGET_LINK_LIBRARIES(${PROTO_CLIENT} 
    ${PROTOBUF_LIBRARIES}
    ${SRC_PROTOBUF_FILES}
)